--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -12,20 +12,20 @@
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
 
  		<!-- Bootstrap -->
- 		<link type="text/css" rel="stylesheet" href="static/css/bootstrap.min.css"/>
+ 		<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"/>
 
  		<!-- Slick -->
- 		<link type="text/css" rel="stylesheet" href="static/css/slick.css"/>
- 		<link type="text/css" rel="stylesheet" href="static/css/slick-theme.css"/>
+ 		<link type="text/css" rel="stylesheet" href="css/slick.css"/>
+ 		<link type="text/css" rel="stylesheet" href="css/slick-theme.css"/>
 
  		<!-- nouislider -->
- 		<link type="text/css" rel="stylesheet" href="static/css/nouislider.min.css"/>
+ 		<link type="text/css" rel="stylesheet" href="css/nouislider.min.css"/>
 
  		<!-- Font Awesome Icon -->
- 		<link rel="stylesheet" href="static/css/font-awesome.min.css">
+ 		<link rel="stylesheet" href="css/font-awesome.min.css">
 
  		<!-- Custom stlylesheet -->
- 		<link type="text/css" rel="stylesheet" href="static/css/style.css"/>
+ 		<link type="text/css" rel="stylesheet" href="css/style.css"/>
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -64,7 +64,7 @@
 						<div class="col-md-3">
 							<div class="header-logo">
 								<a href="#" class="logo">
-									<img src="static/images/logo.png" alt="">
+									<img src="images/logo.png" alt="">
 								</a>
 							</div>
 						</div>
@@ -110,7 +110,7 @@
 										<div class="cart-list">
 											<div class="product-widget">
 												<div class="product-img">
-													<img src="static/images/product01.png" alt="">
+													<img src="images/product01.png" alt="">
 												</div>
 												<div class="product-body">
 													<h3 class="product-name"><a href="#">product name goes here</a></h3>
@@ -121,7 +121,7 @@
 
 											<div class="product-widget">
 												<div class="product-img">
-													<img src="static/images/product02.png" alt="">
+													<img src="images/product02.png" alt="">
 												</div>
 												<div class="product-body">
 													<h3 class="product-name"><a href="#">product name goes here</a></h3>
@@ -218,19 +218,19 @@
 					<div class="col-md-5 col-md-push-2">
 						<div id="product-main-img">
 							<div class="product-preview">
-								<img src="static/images/product01.png" alt="">
+								<img src="images/product01.png" alt="">
 							</div>
 
 							<div class="product-preview">
-								<img src="static/images/product03.png" alt="">
+								<img src="images/product03.png" alt="">
 							</div>
 
 							<div class="product-preview">
-								<img src="static/images/product06.png" alt="">
+								<img src="images/product06.png" alt="">
 							</div>
 
 							<div class="product-preview">
-								<img src="static/images/product08.png" alt="">
+								<img src="images/product08.png" alt="">
 							</div>
 						</div>
 					</div>
@@ -240,19 +240,19 @@
 					<div class="col-md-2  col-md-pull-5">
 						<div id="product-imgs">
 							<div class="product-preview">
-								<img src="static/images/product01.png" alt="">
+								<img src="images/product01.png" alt="">
 							</div>
 
 							<div class="product-preview">
-								<img src="static/images/product03.png" alt="">
+								<img src="images/product03.png" alt="">
 							</div>
 
 							<div class="product-preview">
-								<img src="static/images/product06.png" alt="">
+								<img src="images/product06.png" alt="">
 							</div>
 
 							<div class="product-preview">
-								<img src="static/images/product08.png" alt="">
+								<img src="images/product08.png" alt="">
 							</div>
 						</div>
 					</div>
@@ -566,7 +566,7 @@
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="static/images/product01.png" alt="">
+								<img src="images/product01.png" alt="">
 								<div class="product-label">
 									<span class="sale">-30%</span>
 								</div>
@@ -594,7 +594,7 @@
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="static/images/product02.png" alt="">
+								<img src="images/product02.png" alt="">
 								<div class="product-label">
 									<span class="new">NEW</span>
 								</div>
@@ -629,7 +629,7 @@
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="static/images/product03.png" alt="">
+								<img src="images/product03.png" alt="">
 							</div>
 							<div class="product-body">
 								<p class="product-category">Category</p>
@@ -659,7 +659,7 @@
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="static/images/product04.png" alt="">
+								<img src="images/product04.png" alt="">
 							</div>
 							<div class="product-body">
 								<p class="product-category">Category</p>
@@ -820,12 +820,12 @@
 		<!-- /FOOTER -->
 
 		<!-- jQuery Plugins -->
-		<script src="static/js/jquery.min.js"></script>
-		<script src="static/js/bootstrap.min.js"></script>
-		<script src="static/js/slick.min.js"></script>
-		<script src="static/js/nouislider.min.js"></script>
-		<script src="static/js/jquery.zoom.min.js"></script>
-		<script src="static/js/main.js"></script>
+		<script src="js/jquery.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+		<script src="js/slick.min.js"></script>
+		<script src="js/nouislider.min.js"></script>
+		<script src="js/jquery.zoom.min.js"></script>
+		<script src="js/main.js"></script>
 
 	</body>
 </html>
